--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ nav a {
 
 .profileWrapper {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .profileForm {
@@ -118,4 +118,10 @@ input, textarea {
 .avatar {
   width: 10em;
   height: auto;
+}
+
+.inqueryCard {
+  border: 2px solid var(--dark);
+  border-radius: 5px;
+  margin: 10px 0;
 }
